[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canny-edge-processor"
version = "0.1.0"
description = "CLI utility for batch Canny edge extraction on image directories"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
canny-edge = "canny_edge.cli:main"
